--- a/views/lastone.html
+++ b/views/lastone.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Foodmap</title>
+    <title>User info</title>
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Corben" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nobile" rel="stylesheet">
@@ -13,25 +13,19 @@
     <link rel="stylesheet" href="./../css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Valid Number</title>
+    <title>Sign Up</title>
   </head>
   <body>
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 text-center">
-            <h2 class="text-center"><i class="fa fa-angle-left fa" aria-hidden="true"></i>
-                Verify Phone number</h2>
-                <h4>Join for now for free ride credit</h4>
-                <p>L A B </p>
-                <p class="message">enter the code sent to +52</p>
-                  <button id="valid" type="button" name="button">Resend code</button>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-12 text-center next">
-              <button type="button" name="button" id="next">NEXT</button>
-            </div>
-          </div>
-
+    <div class="row">
+      <div class="col-xs-12 col-sm-12">
+        <div class="last">
+          <center>
+            <img src="./../assets/images/logo-white.png" id="logo"  alt="cover-splash">
+              <h1>Now you are a driver</h1>
+          </center>
+        </div>
+      </div>
+    </div>
 
     <!--Enlace funcionalidad jquery-->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
