--- a/views/userdata.html
+++ b/views/userdata.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Foodmap</title>
+    <title>User info</title>
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Corben" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nobile" rel="stylesheet">
@@ -13,19 +13,41 @@
     <link rel="stylesheet" href="./../css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Valid Number</title>
+    <title>Sign Up</title>
   </head>
   <body>
         <div class="row">
           <div class="col-xs-12 col-sm-12 text-center">
             <h2 class="text-center"><i class="fa fa-angle-left fa" aria-hidden="true"></i>
-                Verify Phone number</h2>
+                Sign Up</h2>
+
                 <h4>Join for now for free ride credit</h4>
-                <p>L A B </p>
-                <p class="message">enter the code sent to +52</p>
-                  <button id="valid" type="button" name="button">Resend code</button>
-            </div>
-          </div>
+
+                <form class="form-horizontal" role="form">
+                  <div class="form-group">
+                    <div class="col-xs-12 col-sm-12">
+                      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-10">
+                      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                      <div class="checkbox">
+                      <label>
+                        <input type="checkbox"> I agree to Lyft´ss <a href="#"><p>Terms of servide</p></a>
+                        </label>
+                      </div>
+                    </div>
+                    </div>
+                    <div class="form-group">
+                    </div>
+                    </form>
+                </div>
+              </div>
           <div class="row">
             <div class="col-xs-12 col-sm-12 text-center next">
               <button type="button" name="button" id="next">NEXT</button>
